--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "grunt-express": "^1.4.1"
   }
